--- a/vault.html
+++ b/vault.html
@@ -411,6 +411,7 @@
 
   window.addEventListener("DOMContentLoaded", () => {
     document.getElementById("connectWalletBtn").addEventListener("click", connectWallet);
+    document.getElementById("wallet").addEventListener("click", openProfileModal);
   });
 
   // Profile Modal Logic
