--- a/vault.html
+++ b/vault.html
@@ -140,6 +140,10 @@
       z-index: 999;
     }
 
+    .modal-overlay.show {
+  display: flex;
+}
+
     .modal-content {
       background: rgba(255,255,255,0.04);
       border: 1px solid rgba(255,255,255,0.1);
