--- a/vault.html
+++ b/vault.html
@@ -43,66 +43,6 @@
       padding-bottom: 80px;
     }
 
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 16px;
-    }
-
-    .nav-btn {
-      background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 10px;
-      color: #00ffe1;
-      font-size: 13px;
-      padding: 8px 14px;
-      text-decoration: none;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 6px rgba(0,255,225,0.1);
-      transition: 0.2s ease;
-    }
-
-    .nav-btn:hover {
-      background: rgba(255,255,255,0.08);
-      transform: scale(1.03);
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      right: 0;
-      top: 40px;
-      background: rgba(255,255,255,0.04);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 10px;
-      min-width: 160px;
-      z-index: 99;
-      backdrop-filter: blur(10px);
-      text-align: left;
-    }
-
-    .dropdown-content a {
-      color: #00ffe1;
-      padding: 10px 14px;
-      display: block;
-      font-size: 13px;
-      text-decoration: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: rgba(255,255,255,0.08);
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
     .wallet-hud {
       display: flex;
       flex-wrap: wrap;
@@ -128,7 +68,16 @@
       cursor: pointer;
     }
 
-        .modal-overlay {
+    .glass-panel {
+      background: rgba(255,255,255,0.03);
+      border-radius: 20px;
+      border: 1px solid rgba(255,255,255,0.08);
+      backdrop-filter: blur(18px);
+      padding: 24px;
+      margin-top: 16px;
+    }
+
+    .modal-overlay {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
@@ -138,6 +87,10 @@
       justify-content: center;
       align-items: center;
       z-index: 999;
+    }
+
+    .modal-overlay.show {
+      display: flex;
     }
 
     .modal-content {
@@ -167,14 +120,21 @@
     .modal-content img {
       width: 80px;
       height: 80px;
-      border-radius: 50%;
       object-fit: cover;
+      border-radius: 50%;
       margin-bottom: 12px;
       border: 2px solid #00ffe1;
     }
 
+    .modal-content input[type="file"] {
+      margin-top: 8px;
+      margin-bottom: 12px;
+      font-size: 12px;
+      color: #00ffe1;
+    }
+
     .close-btn {
-      margin-top: 16px;
+      margin-top: 8px;
       background: #111;
       color: #00ffe1;
       border: 1px solid #00ffe140;
@@ -183,158 +143,47 @@
       font-size: 13px;
       cursor: pointer;
     }
-
-    .upload-btn {
-      margin-top: 10px;
-      background: #222;
-      border: 1px solid #00ffe140;
-      color: #00ffe1;
-      padding: 6px 12px;
-      border-radius: 8px;
-      font-size: 12px;
-      cursor: pointer;
-    }
-
-    .glass-panel {
-      background: rgba(255,255,255,0.03);
-      border-radius: 20px;
-      border: 1px solid rgba(255,255,255,0.08);
-      backdrop-filter: blur(18px);
-      padding: 24px;
-      margin-top: 16px;
-    }
-
-    .game-title {
-      font-size: 20px;
-      color: #fff;
-      margin-bottom: 8px;
-      text-align: center;
-    }
-
-    .game-details {
-      font-size: 14px;
-      color: #aaa;
-      margin-bottom: 16px;
-      text-align: center;
-    }
-
-    .buy-btn {
-      display: block;
-      width: 100%;
-      padding: 14px;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 15px;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(99,102,241,0.3);
-      transition: 0.2s ease;
-    }
-
-    .buy-btn:hover { transform: scale(1.03); }
-
-    .status-badge {
-      display: inline-block;
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 6px;
-      font-weight: bold;
-      margin-top: 8px;
-      background: #22d3ee20;
-      color: #22d3ee;
-      border: 1px solid #22d3ee40;
-      text-align: center;
-    }
-
-    .status-live  { background: #34d39920; color: #34d399; border-color: #34d39960; }
-    .status-final { background: #ef444420; color: #ef4444; border-color: #ef444460; }
-    .status-paid  { background: #a855f720; color: #a855f7; border-color: #a855f760; }
-
-    #statusSelector {
-      margin-top: 12px;
-      width: 100%;
-      padding: 8px;
-      border-radius: 8px;
-      background: #111;
-      color: #00ffe1;
-      border: 1px solid #00ffe140;
-      display: none;
-      font-size: 13px;
-    }
-
-    .placeholder-grid {
-      margin-top: 24px;
-      height: 180px;
-      border-radius: 12px;
-      background: repeating-linear-gradient(
-        45deg, rgba(255,255,255,0.03), rgba(255,255,255,0.03) 10px,
-        rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
-      );
-      border: 1px dashed rgba(255,255,255,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: rgba(255,255,255,0.3);
-      font-size: 14px;
-    }
   </style>
 </head>
 <body>
-<div class="cyber-grid"></div>
-<div class="container">
-  <div class="header-bar">
-    <a href="https://y2kcoin.org" class="nav-btn">Main Site</a>
-    <div class="dropdown">
-      <button class="nav-btn">Menu</button>
-      <div class="dropdown-content">
-        <a href="#">Settings</a>
-        <a href="https://discord.gg/XxtpYNXX4a">Discord</a>
-        <a href="#">Log Out</a>
-      </div>
+  <div class="cyber-grid"></div>
+  <div class="container">
+    <div class="wallet-hud">
+      <span id="wallet" onclick="openProfileModal()">0x...</span>
+      <span id="balance">0 Y2K</span>
+      <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="flex:1; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
+      <button id="connectWalletBtn" class="nav-btn" style="margin-top:12px;">Connect Wallet</button>
+    </div>
+
+    <div class="glass-panel">
+      <div class="game-title">NBA Finals – Game 1</div>
+      <div class="game-details">Buy-in: 200,000 Y2K<br>Pot Total: 4,200,000 Y2K</div>
+      <div id="statusBadge" class="status-badge status-live">LIVE</div>
+      <select id="statusSelector">
+        <option value="live">LIVE</option>
+        <option value="final">FINAL</option>
+        <option value="paid">PAID</option>
+      </select>
+      <button class="buy-btn">Buy a Square</button>
+    </div>
+
+    <div class="placeholder-grid">[ Square Grid Coming Soon ]</div>
+  </div>
+
+  <!-- Player Profile Modal -->
+  <div id="profileModal" class="modal-overlay">
+    <div class="modal-content">
+      <h2>Player Profile</h2>
+      <img id="profileImg" src="" alt="Profile Picture" />
+      <input type="file" id="uploadInput" accept="image/*" />
+      <p id="profileName">@nickname</p>
+      <p id="profileWallet">Wallet: 0x1234...abcd</p>
+      <p id="profileStats">Games Played: 0<br>Squares Bought: 0<br>Y2K Earnings: 0</p>
+      <button class="close-btn" onclick="closeProfileModal()">Close</button>
     </div>
   </div>
 
-  <div class="wallet-hud">
-    <span id="wallet" onclick="openProfileModal()">0x...</span>
-    <span id="balance">0 Y2K</span>
-    <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="flex:1; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
-    <button id="connectWalletBtn" class="nav-btn" style="margin-top:12px;">Connect Wallet</button>
-  </div>
-
-  <div class="glass-panel">
-    <div class="game-title">NBA Finals – Game 1</div>
-    <div class="game-details">Buy-in: 200,000 Y2K<br>Pot Total: 4,000,000 Y2K</div>
-    <div id="statusBadge" class="status-badge status-live">LIVE</div>
-    <select id="statusSelector">
-      <option value="live">LIVE</option>
-      <option value="final">FINAL</option>
-      <option value="paid">PAID</option>
-    </select>
-    <button class="buy-btn">Buy a Square</button>
-  </div>
-
-  <div class="placeholder-grid">[ Square Grid Coming Soon ]</div>
-</div>
-
-<!-- Profile Modal -->
-<div id="profileModal" class="modal-overlay">
-  <div class="modal-content">
-    <img id="profileImage" src="" alt="PFP" />
-    <h2>Player Profile</h2>
-    <p id="profileName">@nickname</p>
-    <p id="profileWallet">Wallet: 0x1234...abcd</p>
-    <p id="gamesPlayed">Games Played: 0</p>
-    <p id="squaresBought">Squares Bought: 0</p>
-    <p id="totalEarnings">Y2K Earnings: 0</p>
-    <button class="upload-btn" onclick="document.getElementById('pfpUpload').click()">Upload PFP</button>
-    <input id="pfpUpload" type="file" accept="image/*" style="display:none" />
-    <button class="close-btn" onclick="closeProfileModal()">Close</button>
-  </div>
-</div>
-
-<script type="module">
+  <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
   import { getFirestore, doc, setDoc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
   import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-storage.js";
@@ -396,7 +245,12 @@
     nicknameInput.addEventListener("change", async () => {
       const nickname = nicknameInput.value.trim();
       if (nickname.length > 0) {
-        await setDoc(userDocRef, { nickname }, { merge: true });
+        try {
+          await setDoc(userDocRef, { nickname }, { merge: true });
+          console.log("Saved nickname:", nickname);
+        } catch (err) {
+          console.error("Nickname save error:", err);
+        }
       }
     });
 
@@ -419,6 +273,7 @@
       badge.textContent = status.toUpperCase();
       badge.className = "status-badge status-" + status;
     }
+
     onSnapshot(doc(db, "games", gameId), (docSnap) => {
       if (docSnap.exists()) {
         const status = docSnap.data().status;
@@ -431,51 +286,55 @@
   window.addEventListener("DOMContentLoaded", () => {
     document.getElementById("connectWalletBtn").addEventListener("click", connectWallet);
     document.getElementById("wallet").addEventListener("click", openProfileModal);
-    document.querySelector(".close-btn").addEventListener("click", closeProfileModal);
-    document.getElementById("pfpUpload").addEventListener("change", uploadPFP);
+    document.getElementById("uploadInput").addEventListener("change", uploadPFP);
   });
 
   async function openProfileModal() {
     const modal = document.getElementById("profileModal");
     const profileName = document.getElementById("profileName");
     const profileWallet = document.getElementById("profileWallet");
-    const profileImage = document.getElementById("profileImage");
+    const profileStats = document.getElementById("profileStats");
+    const profileImg = document.getElementById("profileImg");
 
     const shortWallet = currentWallet.slice(0, 6) + "..." + currentWallet.slice(-4);
     profileWallet.textContent = "Wallet: " + shortWallet;
 
     const docSnap = await getDoc(doc(db, "users", currentWallet));
-    profileName.textContent = docSnap.exists() && docSnap.data().nickname
-      ? "@" + docSnap.data().nickname
-      : "@unknown";
-
-    document.getElementById("gamesPlayed").textContent = "Games Played: " + (docSnap.data()?.gamesPlayed || 0);
-    document.getElementById("squaresBought").textContent = "Squares Bought: " + (docSnap.data()?.squaresBought || 0);
-    document.getElementById("totalEarnings").textContent = "Y2K Earnings: " + (docSnap.data()?.earnings || 0);
-
-    if (docSnap.data()?.pfpUrl) {
-      profileImage.src = docSnap.data().pfpUrl;
-    } else {
-      profileImage.src = "https://api.dicebear.com/6.x/pixel-art/svg?seed=" + currentWallet.slice(2, 8);
+    if (docSnap.exists()) {
+      const data = docSnap.data();
+      profileName.textContent = data.nickname ? "@" + data.nickname : "@unknown";
+      const games = data.gamesPlayed || 0;
+      const squares = data.squares || 0;
+      const earnings = data.earnings || 0;
+      profileStats.innerHTML = `Games Played: ${games}<br>Squares Bought: ${squares}<br>Y2K Earnings: ${earnings}`;
     }
 
-    modal.style.display = "flex";
+    try {
+      const url = await getDownloadURL(ref(storage, `pfps/${currentWallet}.jpg`));
+      profileImg.src = url;
+    } catch {
+      profileImg.src = "https://via.placeholder.com/80?text=No+PFP";
+    }
+
+    modal.classList.add("show");
   }
 
   function closeProfileModal() {
-    document.getElementById("profileModal").style.display = "none";
+    document.getElementById("profileModal").classList.remove("show");
   }
 
   async function uploadPFP(event) {
     const file = event.target.files[0];
     if (!file || !currentWallet) return;
 
-    const storageRef = ref(storage, `pfp/${currentWallet}`);
-    await uploadBytes(storageRef, file);
-    const url = await getDownloadURL(storageRef);
-
-    await setDoc(doc(db, "users", currentWallet), { pfpUrl: url }, { merge: true });
-    document.getElementById("profileImage").src = url;
+    const fileRef = ref(storage, `pfps/${currentWallet}.jpg`);
+    try {
+      await uploadBytes(fileRef, file);
+      const url = await getDownloadURL(fileRef);
+      document.getElementById("profileImg").src = url;
+    } catch (err) {
+      console.error("Upload failed", err);
+    }
   }
 </script>
 </body>
