--- a/vault.html
+++ b/vault.html
@@ -328,8 +328,8 @@
       <p id="gamesPlayed">Games Played: 0</p>
       <p id="squaresBought">Squares Bought: 0</p>
       <p id="totalEarnings">Y2K Earnings: 0</p>
-      <button class="upload-btn" onclick="document.getElementById('pfpUpload').click()">Upload PFP</button>
-      <input id="pfpUpload" type="file" accept="image/*" style="display:none" />
+      <label class="upload-btn" for="pfpUpload">Upload PFP</label>
+      <input id="pfpUpload" type="file" accept="image/*" style="display:none;" />
       <button class="close-btn">Close</button>
     </div>
   </div>
